update README add authorize kubectl to ECS cluster to deployment add authorize nodes to ECS cluster to deployment

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ terraform.tfplan
 terraform.tfstate
 .terraform.tfstate*
 config_map_aws_auth.yaml
+config_map_aws_auth*.yaml
 *.backup
 ./*.tfstate
 .terraform/
