--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -43,6 +43,10 @@ Master:
     - github-branch-source:2.4.1
     - pipeline:2.6
     - workflow-multibranch:2.20
+    - docker-commons:1.13
+    - docker-workflow:1.17
+    - docker-build-publish:1.3.2
+    - docker-traceability:1.2
   # Used to approve a list of groovy functions in pipelines used the script-security plugin. Can be viewed under /scriptApproval
   ScriptApproval:
     - "method groovy.json.JsonSlurperClassic parseText java.lang.String"
